// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should not parse other values 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "undefined",
    "message": "Expected undefined, received null",
    "path": [],
    "received": "null",
  },
]
`;

exports[`should not parse other values 2`] = `
[
  {
    "code": "invalid_type",
    "expected": "undefined",
    "message": "Expected undefined, received a string",
    "path": [],
    "received": "string",
  },
]
`;
